2006-05-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/ecos/init.c (arp_timer): Only compile this function when
	Ethernet is supported.
	* include/lwipopts.h: PAP_SUPPORT & CHAP_SUPPORT must be either 0
	or 1 otherwise we get compiler errors.
	
2006-03-26  Uwe Kindler <uwe_kindler@web.de>

	* Updated the complete lwIP source to the latest lwIP
	CVS version 1.1.1
	* src/ecos/init.c Added call to netif_set_up(netif) in
	function lwip_set_addr() - this is required since lwIP
	version 1.0.0
	* cdl/lwip_net.cdl Minor modifications for UDP configuration
	options. Renamed CYGNUM_LWIP_TCPIP_THREAD_PRIORITY to
	CYGNUM_LWIP_NETWORK_THREAD_PRIORITY and moved option outside
	CYGPKG_LWIP_TCPIP component because the network thread needs to
	run in all configurations.
	* tests/nc_slave.c
	* tests/tcpecho.c 
	* tests/udpecho.c
	* tests/sockets.c
	* tests/httpd.c Added eCos test infrastructure to tests and 
	made tests applicable depending on lwip configuration.

2006-03-15  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/nc_test_slave.c (nc_slave): Fix some of the compiler
	warnings.

2006-03-13  Uwe Kindler <uwe_kindler@web.de>

	* cdl/lwip_net.cdl Changed default value of 
	CYGNUM_LWIP_MEMP_NUM_SYS_TIMEOUT (required for DHCP). 
	Replaced CYGPKG_LWIP_DHCP_OPTIONS with CYGPKG_LWIP_DHCP 
	and add CYGOPT_LWIP_DHCP_MANAGEMENT for automatic DHCP
	management.
	* include/lwip/ip_addr.h Add macro ip_addr_netcmp() 
	(copied from lwIP CVS).
	* include/netif/etharp.h Updated file to version of
	lwIP CVS.
	* src/ecos/init.c Add include <pkgconf/net_lwip.h>
	Add lwip_dhcp_fine_tmr() and lwip_dhcp_coarse_tmr()
	for DHCP processing.
	Change tcpip_init_done() to start DHCP timers and
	ARP timer.
	Changed lwip_set_addr() to properly setup IP adress
	if DHCP is used.
	Added lwip_dhcp_init() for start of DHCP client.
	Removed start of ARP timer from ecosclue_init().
	* src/netif/etharp.c Updated file to version of
	lwIP CVS.
	
2006-03-02  Andrew Lunn  <andrew.lunn@ascom.ch>
