@@ -1,3 +1,8 @@
+2007-03-22  John Eigelaar  <jeigelaar@mweb.co.za>
+                                                     
+	* include/lwip/netif.h, include/lwip/inet.h: Added externC macro
+	to public fucntions to make them C++ compliant.
+
 2006-05-09  Andrew Lunn  <andrew.lunn@ascom.ch>
 
 	* src/ecos/init.c (arp_timer): Only compile this function when
